# ZeroPing

./: .gitignore  LICENSE  README.md  best_lstm_model.h5  mlflow.db  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
Website/: about.html  demo.html  experiments.html  index.html  research.html  styles.css
anomaly_detection/: isolation_forest_detector.py
api/: __init__.py  main.py
dashboard/: dashboard_app.py
data_processing/: data_loader.py  data_pipeline.py  feature_engineering.py  preprocessor.py
digital_twin/: digital_twin_simulator.py
explainable_ai/: shap_explainer.py  shap_visualizations_api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/dashboard/: DegradationSimulation.tsx  EngineSelector.tsx  ExplainableAI.tsx  HealthGauge.tsx  NavBar.tsx  RemainingLife.tsx  RiskStatus.tsx  SensorMonitoring.tsx  SystemArchitecture.tsx
frontend/src/hooks/: useEngineTelemetry.ts
frontend/src/lib/: engine-data.ts
frontend/src/pages/: Index.tsx
health_risk/: health_calculator.py  risk_evaluator.py
ml_prediction/: evaluator.py  lstm_model.py  random_forest_model.py  trainer.py  xgboost_model.py
tests/: __init__.py  test_imports.py  test_shap_visualizations.py
