[metadata]
name = ZeroPing
version = 1.0.0
description = Intelligent Aircraft Engine Health Monitoring and Emergency Decision Support System
author = ArunArya
license = MIT
platforms = any

[options]
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scikit-learn
    tensorflow
    xgboost
    shap
    plotly
    streamlit

[options.extras_require]
dev =
    flake8
    black
    isort
    pytest
    safety

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    Dataset,
    ml_prediction/models
ignore = E203, E266, E501, W503
per-file-ignores =
    __init__.py:F401

[black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | Dataset
  | ml_prediction/models
)/
'''

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
skip = Dataset,ml_prediction/models,.venv,venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
